Apparently the min-height: 100vh is needed to prevent jumping.
Convert hack; in rare cases jump might still happen on hero's in homepage, luckily they're out of viewport usually. Apply also the old hack as sometimes there is old scroll values visible w/ Chromium during template transition. Downgrade react-locomotive-scroll, because there's odd context scroll warnings which I don't think applies and babel won't remove them. Update locomotive-scroll.

This shit is really getting on my nerves.

--- a/containers/Oras/_OrasHero.scss
+++ b/containers/Oras/_OrasHero.scss
@@ -10,7 +10,8 @@
   }
 
   &.-transition\:pre {
-    background-color: $OrasHero-bgPreTransition;
+    // background-color: $OrasHero-bgPreTransition;
+    background-color: transparent;
     visibility: visible;
     z-index: $Footer-zIndex + 1;
   }
@@ -22,6 +23,10 @@
   @include mq(s) {
     height: 100vw;
   }
+}
+
+.OrasHero-inner {
+  min-height: 100vh;
 }
 
 .OrasHero-wrap {
